Fixes style counter's table last child center alignement

--- a/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_users_statistics.scss
+++ b/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_users_statistics.scss
@@ -3,6 +3,14 @@
   color: $medium-gray;
 }
 
+.table-list.users_count th:not(:first-child), .table-list.users_count td:not(:first-child) {
+  text-align: center;
+}
+
+.table-list.users_count th:last-child, .table-list.users_count td:last-child {
+  text-align: center;
+}
+
 .table-list.users_count th {
   text-transform: capitalize;
 }
